fixed contrast for accessiblity

--- a/css/no-spine-css.css
+++ b/css/no-spine-css.css
@@ -3,10 +3,12 @@
 :root {
     --body-color: black;
     --feature-color1: #aa69a2;
-    --feature-color2: #039281;
-    --feature-color3: #F46554;
+    --feature-color2: #06ad9a;
+    --feature-color3: #c8d603;
+        --feature-color4: #f77162;
     /*#F95738*/
-    --text-color: rgb(241, 241, 241);
+    --text-color-old: rgb(241, 241, 241);   /*#inaccessible contrast*/
+       --text-color: #F0F0F0;
     ;
 }
 body{
@@ -221,7 +223,7 @@ table:hover{
 
 .loader-wrapper p{
   text-align: center;
-  color: var(--feature-color3);
+  color: var(--feature-color4);
   font-size: 30px;
 }
 .loadgif{
@@ -1133,14 +1135,14 @@ h4{
     color:var(--feature-color1);
 }
 .featurecolor2{
-    color:var(--feature-color3);
+    color:var(--feature-color2);
 }
 .featurecolor3{
-   color: #c8d603;
+  color:var(--feature-color3);
 }
 
 .featurecolor4{
-   color:#00a592
+   color:var(--feature-color4);
 }
 
 
